Fix alignment of API logo in documentation screen

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -126,8 +126,6 @@ extend ' .btn-sm' has no matches
   line-height: 1;
   font-family: "Droid Sans", sans-serif;
   max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
 }
 .swagger-section .swagger-ui-wrap b,
 .swagger-section .swagger-ui-wrap strong {
